workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/PublicBoletoMock__mdt.object-meta.xml
<CustomObject>
    <label>PublicBoletoMock</label>
    <pluralLabel>PublicBoletoMock</pluralLabel>
</CustomObject>