workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/aceite__c.field-meta.xml
<CustomField>
    <fullName>aceite__c</fullName>
    <label>aceite</label>
    <length>1</length>
    <type>Text</type>
</CustomField>