workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/agenciacodigocedente__c.field-meta.xml
<CustomField>
    <fullName>agenciacodigocedente__c</fullName>
    <label>agenciacodigocedente</label>
    <length>15</length>
    <type>Text</type>
</CustomField>