workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/banco__c.field-meta.xml
<CustomField>
    <fullName>banco__c</fullName>
    <label>banco</label>
    <length>20</length>
    <type>Text</type>
</CustomField>