workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/carteira__c.field-meta.xml
<CustomField>
    <fullName>carteira__c</fullName>
    <label>carteira</label>
    <length>8</length>
    <type>Text</type>
</CustomField>