workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/codigobanco__c.field-meta.xml
<CustomField>
    <fullName>codigobanco__c</fullName>
    <label>codigobanco</label>
    <length>5</length>
    <type>Text</type>
</CustomField>