workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/codigobarra__c.field-meta.xml
<CustomField>
    <fullName>codigobarra__c</fullName>
    <label>codigobarra</label>
    <length>110</length>
    <type>Text</type>
</CustomField>