workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/codigodigitavel__c.field-meta.xml
<CustomField>
    <fullName>codigodigitavel__c</fullName>
    <label>codigodigitavel</label>
    <length>55</length>
    <type>Text</type>
</CustomField>