workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/codigodivisao__c.field-meta.xml
<CustomField>
    <fullName>codigodivisao__c</fullName>
    <label>codigodivisao</label>
    <length>3</length>
    <type>Text</type>
</CustomField>