workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/corretor__c.field-meta.xml
<CustomField>
    <fullName>corretor__c</fullName>
    <label>corretor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>