workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/datacriacao__c.field-meta.xml
<CustomField>
    <fullName>datacriacao__c</fullName>
    <label>datacriacao</label>
    <type>Date</type>
</CustomField>