workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/datadocumento__c.field-meta.xml
<CustomField>
    <fullName>datadocumento__c</fullName>
    <label>datadocumento</label>
    <type>Date</type>
</CustomField>