workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/dataprocessamento__c.field-meta.xml
<CustomField>
    <fullName>dataprocessamento__c</fullName>
    <label>dataprocessamento</label>
    <type>Date</type>
</CustomField>