workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/empresa__c.field-meta.xml
<CustomField>
    <fullName>empresa__c</fullName>
    <label>empresa</label>
    <length>8</length>
    <type>Text</type>
</CustomField>