workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/especie__c.field-meta.xml
<CustomField>
    <fullName>especie__c</fullName>
    <label>especie</label>
    <length>3</length>
    <type>Text</type>
</CustomField>