workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/especiedocumento__c.field-meta.xml
<CustomField>
    <fullName>especiedocumento__c</fullName>
    <label>especiedocumento</label>
    <length>5</length>
    <type>Text</type>
</CustomField>