workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>