workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/idcontrato__c.field-meta.xml
<CustomField>
    <fullName>idcontrato__c</fullName>
    <label>idcontrato</label>
    <length>8</length>
    <type>Text</type>
</CustomField>