workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/instrucao1__c.field-meta.xml
<CustomField>
    <fullName>instrucao1__c</fullName>
    <label>instrucao1</label>
    <length>75</length>
    <type>Text</type>
</CustomField>