workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/instrucao2__c.field-meta.xml
<CustomField>
    <fullName>instrucao2__c</fullName>
    <label>instrucao2</label>
    <length>75</length>
    <type>Text</type>
</CustomField>