workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/instrucao3__c.field-meta.xml
<CustomField>
    <fullName>instrucao3__c</fullName>
    <label>instrucao3</label>
    <length>75</length>
    <type>Text</type>
</CustomField>