workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/localpagamento__c.field-meta.xml
<CustomField>
    <fullName>localpagamento__c</fullName>
    <label>localpagamento</label>
    <length>150</length>
    <type>Text</type>
</CustomField>