workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/mensagemobrigatoria2__c.field-meta.xml
<CustomField>
    <fullName>mensagemobrigatoria2__c</fullName>
    <label>mensagemobrigatoria2</label>
    <length>206</length>
    <type>Text</type>
</CustomField>