workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/mensagemobrigatoria__c.field-meta.xml
<CustomField>
    <fullName>mensagemobrigatoria__c</fullName>
    <label>mensagemobrigatoria</label>
    <length>206</length>
    <type>Text</type>
</CustomField>