workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/nossonumero__c.field-meta.xml
<CustomField>
    <fullName>nossonumero__c</fullName>
    <label>nossonumero</label>
    <length>20</length>
    <type>Text</type>
</CustomField>