workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/numeroapolice__c.field-meta.xml
<CustomField>
    <fullName>numeroapolice__c</fullName>
    <label>numeroapolice</label>
    <length>9</length>
    <type>Text</type>
</CustomField>