workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/numerodocumento__c.field-meta.xml
<CustomField>
    <fullName>numerodocumento__c</fullName>
    <label>numerodocumento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>