workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/numeroendosso__c.field-meta.xml
<CustomField>
    <fullName>numeroendosso__c</fullName>
    <label>numeroendosso</label>
    <length>10</length>
    <type>Text</type>
</CustomField>