workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/numeroparcela__c.field-meta.xml
<CustomField>
    <fullName>numeroparcela__c</fullName>
    <label>numeroparcela</label>
    <length>3</length>
    <type>Text</type>
</CustomField>