workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/numexternoparceironegocio__c.field-meta.xml
<CustomField>
    <fullName>numexternoparceironegocio__c</fullName>
    <label>numexternoparceironegocio</label>
    <length>20</length>
    <type>Text</type>
</CustomField>