workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/operacaoprincipal__c.field-meta.xml
<CustomField>
    <fullName>operacaoprincipal__c</fullName>
    <label>operacaoprincipal</label>
    <length>4</length>
    <type>Text</type>
</CustomField>