workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/quantidadevalorcontrato__c.field-meta.xml
<CustomField>
    <fullName>quantidadevalorcontrato__c</fullName>
    <label>quantidadevalorcontrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>