workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/sacado__c.field-meta.xml
<CustomField>
    <fullName>sacado__c</fullName>
    <label>sacado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>