workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/susep__c.field-meta.xml
<CustomField>
    <fullName>susep__c</fullName>
    <label>susep</label>
    <length>6</length>
    <type>Text</type>
</CustomField>