workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/usobanco__c.field-meta.xml
<CustomField>
    <fullName>usobanco__c</fullName>
    <label>usobanco</label>
    <length>17</length>
    <type>Text</type>
</CustomField>