workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/vencimento__c.field-meta.xml
<CustomField>
    <fullName>vencimento__c</fullName>
    <label>vencimento</label>
    <type>Date</type>
</CustomField>