workspace-sf/force-app/main/default/objects/PublicBoletoMock__mdt/fields/viaboleto__c.field-meta.xml
<CustomField>
    <fullName>viaboleto__c</fullName>
    <label>viaboleto</label>
    <length>1</length>
    <type>Text</type>
</CustomField>